--- a/#src/scss/program.scss
+++ b/#src/scss/program.scss
@@ -82,30 +82,27 @@
         }
     }
     @media (max-width: $bp2) {
-        grid-template-columns: 1fr;
-        &__status {
-            justify-self: start;
-        }
-        &__content {
-            h4 {
-                max-width: 550px;
-            }
-            h5 {
-                margin-top: 8px;
-            }
-        }
+        padding: 20px 16px;
+        grid-template-columns: 150px 1fr 130px;
     }
     @media (max-width: $bp3) {
-        padding: 20px 16px;
+        grid-template-columns: 1fr;
         &__date {
             padding-left: 8px;
             .h5 {
                 line-height: 1.2;
             }
         }
+        &__status {
+            justify-self: start;
+        }
         &__content {
             h4 {
                 line-height: 1.3;
+                max-width: 550px;
+            }
+            h5 {
+                margin-top: 8px;
             }
         }
     }
@@ -151,13 +148,6 @@
     }
     &.active {
         .item-stage__ball {
-            display: inline-block;
-            width: 24px;
-            height: 24px;
-            position: absolute;
-            top: 0;
-            left: 0;
-            border-radius: 50%;
             box-shadow: inset 0 4px 4px 0 rgba(138, 95, 215, 0.8);
             background: linear-gradient(179deg, #e5dbe1 0%, #5c399b 93.39%);
             animation: bounce-in-right 1s ease-out both;
@@ -192,6 +182,15 @@
             background: var(--gray-color);
         }
     }
+    &__ball {
+        display: block;
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
     @media (max-width: $bp3) {
         padding-bottom: 28px;
         display: block;
@@ -200,6 +199,14 @@
         margin-bottom: 12px;
         &:last-child {
             margin-bottom: 0;
+        }
+        &.active .item-stage__ball {
+            transform: scale(1);
+        }
+        &__ball {
+            transform: scale(0);
+            transition: all 0.3s linear;
+            animation: none !important;
         }
         &__date {
             margin-bottom: 12px;
