--- a/#src/scss/program.scss
+++ b/#src/scss/program.scss
@@ -108,7 +108,6 @@
     }
 }
 .stages-sec {
-    overflow: hidden;
     .sec-top {
         h2 {
             max-width: 43%;
@@ -125,6 +124,45 @@
         }
     }
     @media (max-width: $bp3) {
+        /* .container {
+            max-height: 100dvh;
+            display: flex;
+            flex-direction: column;
+        } 
+        .sec-inner {
+            flex: 1 1 auto;
+            overflow: hidden;
+            padding-top: 30px;
+        }
+        .sec-top {
+            margin-bottom: 0;
+        }
+        .sec-top.light-bg {
+            position: relative;
+            z-index: 1;
+            &:before,
+            &:after {
+                content: "";
+                display: block;
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                z-index: -1;
+                pointer-events: none;
+                transition: all 0.3s linear;
+            }
+            &:before {
+                top: 0;
+                height: 100%;
+                background: var(--white-color);
+            }
+            &:after {
+                top: 100%;
+                height: 60px;
+                background: linear-gradient(180deg, #fff, rgba(0, 0, 0, 0) 100%);
+            }
+        }*/
         &__items {
             display: block;
         }
@@ -202,14 +240,6 @@
         margin-bottom: 12px;
         &:last-child {
             margin-bottom: 0;
-        }
-        &.active .item-stage__ball {
-            transform: scale(1);
-        }
-        &__ball {
-            transform: scale(0);
-            transition: all 0.3s linear;
-            animation: none !important;
         }
         &__date {
             margin-bottom: 12px;
