--- a/kreanopolis/css/style.css
+++ b/kreanopolis/css/style.css
@@ -1833,10 +1833,6 @@ h6,
   margin: 0 0 0 8px;
 }
 
-.stages-sec {
-  overflow: hidden;
-}
-
 .stages-sec .sec-top h2 {
   max-width: 43%;
 }
@@ -3147,6 +3143,48 @@ h6,
     margin-top: 8px;
   }
 
+  .stages-sec {
+    /* .container {
+        max-height: 100dvh;
+        display: flex;
+        flex-direction: column;
+    } 
+    .sec-inner {
+        flex: 1 1 auto;
+        overflow: hidden;
+        padding-top: 30px;
+    }
+    .sec-top {
+        margin-bottom: 0;
+    }
+    .sec-top.light-bg {
+        position: relative;
+        z-index: 1;
+        &:before,
+        &:after {
+            content: "";
+            display: block;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            z-index: -1;
+            pointer-events: none;
+            transition: all 0.3s linear;
+        }
+        &:before {
+            top: 0;
+            height: 100%;
+            background: var(--white-color);
+        }
+        &:after {
+            top: 100%;
+            height: 60px;
+            background: linear-gradient(180deg, #fff, rgba(0, 0, 0, 0) 100%);
+        }
+    }*/
+  }
+
   .stages-sec__items {
     display: block;
   }
@@ -3166,22 +3204,6 @@ h6,
 
   .item-stage:last-child {
     margin-bottom: 0;
-  }
-
-  .item-stage.active .item-stage__ball {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-  }
-
-  .item-stage__ball {
-    -webkit-transform: scale(0);
-    -ms-transform: scale(0);
-    transform: scale(0);
-    -webkit-transition: all 0.3s linear;
-    transition: all 0.3s linear;
-    -webkit-animation: none !important;
-    animation: none !important;
   }
 
   .item-stage__date {
