--- a/#src/scss/modal.scss
+++ b/#src/scss/modal.scss
@@ -254,6 +254,9 @@
         h6 {
             font-weight: 500;
         }
+        li, p {
+            font-size: 16px;
+        }
         p {
             margin-bottom: 20px;
         }
